# devinstaller-core-py

./: .coveragerc  .env  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CODEOWNERS  Makefile  Pipfile  README.md  README.org  README.rst  develop.ipynb  docker-compose.sonarqube-scanner.yml  docker-compose.sonarqube.yml  install.yml  mypy.ini  project-journal.org  pyproject.toml  requirements.txt  run  sample.devfile.py  sample.devfile.toml  sample.devfile.yml  setup.cfg  setup.py  sonar-project.properties  spec.org  tox.ini
.chglog/: CHANGELOG.tpl.md  config.yml
assets/: sample.yml  schema.yaml
devin/: __init__.py  __main__.py  commands.py  data.py  main.py  schema.py  yaml.py
devinstaller/: __init__.py  __main__.py  app.py  app_module.py  base_module.py  commands.py  data.py  exceptions.py  file_handler.py  file_module.py  folder_module.py  group_module.py  helpers.py  hookspecs.py  host.py  installer.py  lib.py  link_module.py  main.py  models.py  module_dependency.py  phony_module.py  platform_model.py  schema.py  utilities.py  yaml.py  yaml_handler.py
devinstaller_core/: app_module.py  base_module.py  block_platform.py  command.py  commands.py  common_models.py  constants.py  dependency_graph.py  extension.py  file_handler.py  file_manager.py  file_module.py  folder_module.py  group_module.py  interface_block.py  link_module.py  module_app.py  module_base.py  module_dependency.py  module_file.py  module_folder.py  phony_module.py  platform_block.py  schema.py  user_interaction.py  utilities.py
docs/: api.rst  commands.rst  conf.py  contributing.org  contributing.rst  data.rst  design_process.org  design_process.rst  devinstaller.app.rst  devinstaller.commands.rst  devinstaller.exceptions.rst  devinstaller.file_handler.rst  devinstaller.models.app_module.rst  devinstaller.models.base_module.rst  devinstaller.models.common_models.rst  devinstaller.models.file_module.rst  devinstaller.models.folder_module.rst  devinstaller.models.group_module.rst  devinstaller.models.link_module.rst  devinstaller.models.module_dependency.rst  devinstaller.models.phony_module.rst  devinstaller.models.platform_model.rst  devinstaller.models.rst  devinstaller.rst  devinstaller.schema.rst  devinstaller.utilities.rst  devinstaller_core.app_module.rst  devinstaller_core.base_module.rst  devinstaller_core.block_interface.rst  devinstaller_core.block_platform.rst  devinstaller_core.command.rst  devinstaller_core.command_python.rst  devinstaller_core.command_shell.rst  devinstaller_core.commands.rst  devinstaller_core.common_models.rst  devinstaller_core.dependency_graph.rst  devinstaller_core.exception.rst  devinstaller_core.exceptions.rst  devinstaller_core.extension.rst  devinstaller_core.file_handler.rst  (+40 more)
(+69 files in other folders)
