[tool.poetry]
name = "devinstaller"
version = "0.4.1"
description = "A Python package to setup your development environment and manage all your dotfiles, software and packages"
authors = ["Justine Kizhakkinedath <justine@kizhak.com>"]
license = "MIT License"
readme = "README.md"
homepage = "https://justine.kizhak.com/projects/devinstaller"
repository = "https://gitlab.com/justinekizhak/devinstaller"
documentation = "https://devinstaller.readthedocs.io/en/latest/"
keywords = [
  "dotfile manager"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.8"
cerberus = "^1.3.2"
click = "^7.1.2"
colorama = "^0.4.3"
anymarkup = "^0.8.1"

[tool.poetry.dev-dependencies]
sphinx = "^3.0.4"
sphinx-autobuild = "^0.7.1"
sphinxcontrib-napoleon = "^0.7"
mypy = "^0.780"
lxml = "^4.5.1"
jupyterlab = "^2.1.4"
pytest = "^5.4.3"
pytest-cov = "^2.10.0"
pytest-subprocess = "^0.1.4"

[tool.poetry.scripts]
dev = 'devinstaller.__main__:main'
devinstaller = 'devinstaller.__main__:main'

[tool.poetry.urls]
"Bug Reports" = "https://gitlab.com/justinekizhak/devinstaller/issues"
"Say Thanks!" = "https://saythanks.io/to/justine%40kizhak.com"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
